<resources>

    <string name="app_name">BigBang-VIP</string>
    <string name="super_moon_good_night">守着super moon和你的good night 入睡</string>
    <string name="bb_vip_title">BB*VIP[16/11/15]新闻</string>
    <string name="dynamic">动态</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="register_btn">注册</string>
    <string name="setting_login">登录</string>
    <string name="setting_register">注册</string>
    <string name="setting_about">关于</string>
    <string name="cancel_btn">取消</string>
    <string name="register_email_hint">请输入邮箱</string>
    <string name="register_pwdagain_hint">请再次输入密码</string>
    <string name="vip_fans">VIP饭团</string>
    <string name="bigbang_about">\t\t\t\tvip饭团是一款专门针对BigBang\n歌迷、粉丝开设的手机爱豆app，
        在\n这里你可以了解到关于他们最新的资\n讯，关注他们最新的动态，掌握他们\n的行程，还可以对着你爱豆的帅照流\n口水！
        闲来也可以看看\tvip\t脑洞大开的爱豆小说.....嘻嘻~，是不是迫不及待了呢？
        亲爱的vip,快开始体验吧！</string>
    <string name="baidubaike">\t\t\tBIGBANG是于2006年出道的韩国组合，\n由队长G-DRAGON、T.O.P、TAEYANG、\nDAESUNG、SEUNGRI五位成员组成。
        \t\t\t 2006年8月19日，BIGBANG在YG Family世界巡回演唱会首尔站上正式出道，并于同年12月22日发行首张正规专辑\n《BIGBANGVOL.1 SINCE2007》。
        \t\t\t2007年5月，BIGBANG开始进行全国巡回演唱会，并于7月推出了第一张迷你专辑\n《谎言》。
        \n2008年8月8日，BIGBANG发行MINI专辑\n《STAND UP》，专辑中的歌曲《一天一天》在KTF连续六周蝉联第一名。
        2009年，BIGBANG赴日本发展。 2011年，BIGBANG成为历史上第一个获得MTV 欧洲音乐大奖“Worldwide Act”的亚洲组合，并于2012年上半年登上美国格莱美官方网页，成为首个被格莱美介绍的韩国歌手。
        \n2012年2月，BIGBANG发行迷你辑《ALIVE》。
        \n2015年，BIGBANG回归韩国歌坛，同年5月至8月发行数字专辑《MADE》，四张MINI专辑总销量超过340万。
        \n2016年8月20日，BIGBANG在韩国首尔举办出道十周年纪念演唱会，当晚将近三个小时的演出中，BIGBANG共演绎了19首作品，与粉丝度过了一个精彩、难忘的音乐狂欢夜。
        \n中文名：宇宙大爆炸
        \n外文名：Bigbang；빅뱅
        \n国籍：韩国
        \n职业：歌手，唱片制作人，演员
        \n经纪公司：YG Entertainment
        \n代表作品：谎言，最后的问候，一天一天，My Heaven，Tonight，Blue，Fantastic Baby，Loser，If You
        \n主要成就：
        \n2007首尔歌谣大赏-大赏音、源奖
        \n2007MKMF颁奖礼-年度歌曲、编曲
        \n2007MKMF颁奖礼-最佳男子组合赏
        \n2008MKMF颁奖礼-最佳男子组合赏
        \n2008MKMF颁奖礼-年度歌手大赏
        \n2008首尔歌谣大赏-最佳唱片大赏
        \n2009MAMA颁奖礼-年度专辑大赏
        \n2009Melon颁奖礼-年度专辑大赏
        \n2009KKCA最佳男歌手大赏
        \n2009第42届日本有线大奖最佳新人
        \n2009第51届日本歌谣大赏最佳新
        \n2010MTV Japan颁奖礼‘3冠王’
        \n2010联合国GlobalUnityAward大奖
        \n2010MAMA颁奖礼-最佳男歌手大赏
        \n2011新加坡e乐最受欢迎韩国歌手
        \n2012MBC 演艺大赏 - 时尚王奖GD
        \n2013MAMA最佳男歌手-GD
        \n2013MAMA年度最佳歌手-GD
        \n出道日期：2006年8月19日
        \n应援物：皇冠灯
        \n粉丝名称：V.I.P</string>
    <string name="setting_collection">收藏</string>
    <string name="title_content">投稿</string>
    <string name="from_picture">从相册里选择</string>
    <string name="popup_cancle">取消</string>
    <string name="browers_news">新闻</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whereissue">请选择要发布的频道</string>
    <string name="mycollection">我的收藏</string>


</resources>
