<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/believe">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp">

        <EditText
            android:id="@+id/register_name"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:hint="@string/login_name_hint"/>

        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:hint="@string/login_pwd_hint"/>

        <EditText
            android:id="@+id/register_pwdagain"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:hint="@string/register_pwdagain_hint"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/register_btn1"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:background="@mipmap/button2"/>

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:background="@mipmap/button3"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">
        <ImageView
            android:id="@+id/register_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/back1"/>
    </LinearLayout>

</RelativeLayout>

