<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical"
    tools:context="com.example.asus.fragment.SettingFragment">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/headportrait"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/beautiful"
            android:layout_centerInParent="true"/>

    </RelativeLayout>


 <LinearLayout
     android:layout_weight="1"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:orientation="vertical"
     android:gravity="center">
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/setting_login"
            android:layout_width="150dp"
            android:layout_height="50dp" />
        <ImageView
            android:id="@+id/login_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@mipmap/loginlogo"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_login"
            android:layout_toRightOf="@+id/login_image"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/setting_register"
            android:layout_width="150dp"
            android:layout_height="50dp" />
        <ImageView
            android:id="@+id/register_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@mipmap/registerlogo"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_register"
            android:layout_toRightOf="@+id/register_image"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/setting_collection"
            android:layout_width="150dp"
            android:layout_height="50dp" />
        <ImageView
            android:id="@+id/collection_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@mipmap/collection"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_collection"
            android:layout_toRightOf="@+id/collection_image"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/setting_about"
            android:layout_width="150dp"
            android:layout_height="50dp" />
        <ImageView
            android:id="@+id/about_image"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@mipmap/aboutlogo"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/setting_about"
            android:layout_toRightOf="@+id/about_image"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"/>
    </RelativeLayout>

   </LinearLayout>
</LinearLayout>
